@startuml
interface PlayerEntity {
  + executeAction(action: ValidAction, map: WorldMap): ExecuteActionResult
}

interface PlayerHuman {
  + killSwitch: Int
  + defendedCities: Set[String]
  + conqueredCities: Set[String]
  + executedActions: List[HumanAction]
  + executeAction(action: HumanAction, map: WorldMap): ExecuteActionResult
  + toString(): String
}

class PlayerHumanImpl {
  - killSwitch: Int
  - defendedCities: Set[String]
  - conqueredCities: Set[String]
  - executedActions: List[HumanAction]
  + executeAction(action: HumanAction, map: WorldMap): ExecuteActionResult
  + toString(): String
}

PlayerHuman <|.. PlayerHumanImpl
PlayerEntity <|-- PlayerHuman
@enduml

